--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
 
 /* Your CSS Code here. */
+.holder {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.item{
+   width: 100px;
+    height: 70px;
+    background-color : brown;
+    border : 1px solid black;
+}
